--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ message("FreeRTOS kernel path: ${FREERTOS_KERNEL_PATH}")
 
 pico_sdk_init()
 
-add_subdirectory(no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src build)
+add_subdirectory(no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src ./build)
 
 # seems to stop the initial check of the compiler and avoids failure
 add_compile_options(-Wall
@@ -40,7 +40,7 @@ if (NOT DEFINED ENV{WIFI_PASSWORD})
 endif()
 
 add_executable(picow_freertos_httpd_nosys
-        picow_freertos_httpd.c fs_ext.c hw_config.c router.c
+        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client
         )
 target_compile_definitions(picow_freertos_httpd_nosys PRIVATE
     WIFI_SSID=\"$ENV{WIFI_SSID}\"
@@ -49,23 +49,21 @@ target_compile_definitions(picow_freertos_httpd_nosys PRIVATE
     )
 target_include_directories(picow_freertos_httpd_nosys PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}
-        ${PICO_SDK_PATH}/src/rp2_common/pico_cyw43_arch/include/pico/cyw43_arch
-        no-OS-FatFS-SD-SPI-RPi-Pico/include
-        ${PICO_LWIP_CONTRIB_PATH}/apps/httpd
+ #       ${PICO_LWIP_CONTRIB_PATH}/apps/httpd
         ${PICO_LWIP_CONTRIB_PATH_INCLUDES}
          )
 target_link_libraries(picow_freertos_httpd_nosys
-        FatFs_SPI
+        pico_stdlib
         pico_cyw43_arch_lwip_threadsafe_background
         pico_lwip_http
-        pico_stdlib
         hardware_adc
+        FatFs_SPI
         FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap
         )
 pico_add_extra_outputs(picow_freertos_httpd_nosys)
 
 add_executable(picow_freertos_httpd_sys
-        picow_freertos_httpd.c fs_ext.c hw_config.c router.c
+        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client
         )
 target_compile_definitions(picow_freertos_httpd_sys PRIVATE
         WIFI_SSID=\"$ENV{WIFI_SSID}\"
@@ -74,20 +72,18 @@ target_compile_definitions(picow_freertos_httpd_sys PRIVATE
         LWIP_SOCKET=1       # we need the socket API (generally this would be in your lwipopts.h)
         )
 target_include_directories(picow_freertos_httpd_sys PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}
-        ${PICO_SDK_PATH}/src/rp2_common/pico_cyw43_arch/include/pico/cyw43_arch
-        ${PICO_SDK_PATH}/src/rp2_common/pico_cyw43_arch/include
-        no-OS-FatFS-SD-SPI-RPi-Pico/include
-        ${PICO_LWIP_CONTRIB_PATH}/apps/httpd
-        ${PICO_LWIP_CONTRIB_PATH_INCLUDES}
+        ${CMAKE_CURRENT_LIST_DIR}     
+#        ${PICO_LWIP_CONTRIB_PATH}/apps/httpd
+       ${PICO_LWIP_CONTRIB_PATH_INCLUDES}
         )
 target_link_libraries(picow_freertos_httpd_sys        
-        FatFs_SPI
+        pico_stdlib
         pico_cyw43_arch_lwip_sys_freertos
         pico_lwip_http
         hardware_adc
-        pico_stdlib
-        FreeRTOS-Kernel-Heap4) # FreeRTOS kernel and dynamic heap        
+        FatFs_SPI
+        FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap   
+        )           
 
 pico_add_extra_outputs(picow_freertos_httpd_sys)
 
