Changing sd card library to freertos FAT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ include(pico_sdk_import.cmake)
 # Pull in FreeRTOS
 include(FreeRTOS_Kernel_import.cmake)
 
-set(PICO_LWIP_CONTRIB_PATH_INCLUDES /Users/Ian/pico/pico-sdk/lib/lwip/src/include/lwip/apps/)
+set(PICO_LWIP_APP_INCLUDE_PATH "/Users/Ian/pico/pico-sdk/lib/lwip/src/include/lwip/apps")
 #set(PICO_LWIP_CONTRIB_PATH        /Users/Ian/pico/pico-sdk/lib/lwip/src/)
 
-message("LWIP app include path: " ${PICO_LWIP_CONTRIB_PATH_INCLUDES})
-message("LWIP http app include path: " ${PICO_LWIP_CONTRIB_PATH})
+set(FATPATH "/Users/Ian/pico/freertos-httpd/FreeRTOS-FAT-CLI-for-RPi-Pico")
 
+message("LWIP app path: " ${PICO_LWIP_APP_INCLUDE_PATH})
+#message("LWIP http app include path: " ${PICO_LWIP_CONTRIB_PATH})
 
 project(test C CXX ASM)
 set(CMAKE_C_STANDARD 11)
@@ -19,11 +20,14 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(PICO_BOARD pico_w)
 
-message("FreeRTOS kernel path: ${FREERTOS_KERNEL_PATH}")
+message("FreeRTOS kernel path: " ${FREERTOS_KERNEL_PATH})
 
 pico_sdk_init()
 
-add_subdirectory(no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src ./build)
+set(FAT_PATH FreeRTOS-FAT-CLI-for-RPi-Pico)
+message("FAT path: " ${FAT_PATH})
+
+add_subdirectory(${FAT_PATH}/FreeRTOS+FAT+CLI ./build)
 
 # seems to stop the initial check of the compiler and avoids failure
 add_compile_options(-Wall
@@ -40,16 +44,20 @@ if (NOT DEFINED ENV{WIFI_PASSWORD})
 endif()
 
 add_executable(picow_freertos_httpd_nosys
-        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client.c data_logger.c
+        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client.c data_logger.c 
         )
 target_compile_definitions(picow_freertos_httpd_nosys PRIVATE
     WIFI_SSID=\"$ENV{WIFI_SSID}\"
     WIFI_PASSWORD=\"$ENV{WIFI_PASSWORD}\"
     CYW43_HOST_NAME="oddWires"        
     )
+    
 target_include_directories(picow_freertos_httpd_nosys PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}
+        
  #       ${PICO_LWIP_CONTRIB_PATH}/apps/httpd
+        ${FAT_PATH}/FreeRTOS+FAT+CLI/Lab-Project-FreeRTOS-FAT/include
+        ${FAT_PATH}/FreeRTOS+FAT+CLI/portable/RP2040
+        ${FAT_PATH}/FreeRTOS+FAT+CLI/include
         ${PICO_LWIP_CONTRIB_PATH_INCLUDES}
          )
 target_link_libraries(picow_freertos_httpd_nosys
@@ -57,13 +65,13 @@ target_link_libraries(picow_freertos_httpd_nosys
         pico_cyw43_arch_lwip_threadsafe_background
         pico_lwip_http
         hardware_adc
-        FatFs_SPI
+        FreeRTOS+FAT+CLI
         FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap
         )
 pico_add_extra_outputs(picow_freertos_httpd_nosys)
 
 add_executable(picow_freertos_httpd_sys
-        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client.c data_logger.c
+        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client.c data_logger.c 
         )
 target_compile_definitions(picow_freertos_httpd_sys PRIVATE
         WIFI_SSID=\"$ENV{WIFI_SSID}\"
@@ -73,15 +81,25 @@ target_compile_definitions(picow_freertos_httpd_sys PRIVATE
         )
 target_include_directories(picow_freertos_httpd_sys PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}     
+        ${FAT_PATH}/FreeRTOS+FAT+CLI/Lab-Project-FreeRTOS-FAT/include
+        ${FAT_PATH}/FreeRTOS+FAT+CLI/portable/RP2040
+        ${FAT_PATH}/FreeRTOS+FAT+CLI/include
 #        ${PICO_LWIP_CONTRIB_PATH}/apps/httpd
-       ${PICO_LWIP_CONTRIB_PATH_INCLUDES}
+#        ${PICO_LWIP_APP_INCLUDE_PATH}
+#        ${FREERTOS_KERNEL_PATH}/include
+#        ${FREERTOS_KERNEL_PATH}/portable/GCC/ARM_CM0
+        ${FATPATH}/Lab-Project-FreeRTOS-FAT/include
+        ${FATPATH}/FreeRTOS+FAT+CLI/portable/RP2040
+        ${FATPATH}/FreeRTOS+FAT+CLI/include
+        /Users/Ian/pico/pico-sdk/lib/lwip/src/include/lwip/apps
+        ${CMAKE_CURRENT_LIST_DIR}
         )
 target_link_libraries(picow_freertos_httpd_sys        
         pico_stdlib
         pico_cyw43_arch_lwip_sys_freertos
         pico_lwip_http
         hardware_adc
-        FatFs_SPI
+        FreeRTOS+FAT+CLI
         FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap   
         )           
 
