--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "no-OS-FatFS-SD-SDIO-SPI-RPi-Pico"]
-	path = no-OS-FatFS-SD-SDIO-SPI-RPi-Pico
-	url = https://github.com/carlk3/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico.git
+[submodule "FreeRTOS-FAT-CLI-for-RPi-Pico"]
+	path = FreeRTOS-FAT-CLI-for-RPi-Pico
+	url = git@github.com:carlk3/FreeRTOS-FAT-CLI-for-RPi-Pico.git
