--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ message("LWIP app path: " ${PICO_LWIP_APP_INCLUDE_PATH})
 
 set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 
-project(test C CXX ASM)
+project(idb C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -29,13 +29,6 @@ message("FAT path: " ${FAT_PATH})
 
 add_subdirectory(${FAT_PATH}/FreeRTOS+FAT+CLI ./build)
 
-# seems to stop the initial check of the compiler and avoids failure
-# add_compile_options(-Wall
-#         -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
-#         -Wno-unused-function # we have some for the docs that aren't called
-#         -Wno-maybe-uninitialized
-#         )
-
 add_compile_options( # -Wimplicit #check we have headers
         -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
         -Wno-unused-function # we have some for the docs that aren't called
@@ -49,46 +42,18 @@ if (NOT DEFINED ENV{WIFI_PASSWORD})
 	message(FATAL_ERROR "WIFI_PASSWORD Environment variable not defined")
 endif()
 
-add_executable(picow_freertos_httpd_nosys
-        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client.c data_logger.c adc.c post.c
+add_executable(idb
+        idb_main.c fs_ext.c hw_config.c idb_router.c idb_ntp_client.c idb_data_logger.c idb_hardware.c idb_post.c idb_runtime_stats.c
         )
-target_compile_definitions(picow_freertos_httpd_nosys PRIVATE
-    WIFI_SSID=\"$ENV{WIFI_SSID}\"
-    WIFI_PASSWORD=\"$ENV{WIFI_PASSWORD}\"
-    CYW43_HOST_NAME="oddWires"        
-    )
-    
-target_include_directories(picow_freertos_httpd_nosys PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR} 
-        ${FAT_PATH}/FreeRTOS+FAT+CLI/Lab-Project-FreeRTOS-FAT/include
-        ${FAT_PATH}/FreeRTOS+FAT+CLI/portable/RP2040
-        ${FAT_PATH}/FreeRTOS+FAT+CLI/include
-        ${PICO_LWIP_APP_INCLUDE_PATH}
-        ${FREERTOS_KERNEL_PATH}/include
-        ${FREERTOS_PATH}/portable/GCC/ARM_CM0
-        ${CMAKE_CURRENT_LIST_DIR} 
-         )
-target_link_libraries(picow_freertos_httpd_nosys
-        pico_stdlib
-        pico_cyw43_arch_lwip_threadsafe_background
-        pico_lwip_http
-        hardware_adc
-        FreeRTOS+FAT+CLI
-        FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap
-        )
-pico_add_extra_outputs(picow_freertos_httpd_nosys)
-
-add_executable(picow_freertos_httpd_sys
-        picow_freertos_httpd.c fs_ext.c hw_config.c router.c picow_ntp_client.c data_logger.c adc.c post.c
-        )
-target_compile_definitions(picow_freertos_httpd_sys PRIVATE
+target_compile_definitions(idb PRIVATE
         WIFI_SSID=\"$ENV{WIFI_SSID}\"
         WIFI_PASSWORD=\"$ENV{WIFI_PASSWORD}\"
         NO_SYS=0            # don't want NO_SYS (generally this would be in your lwipopts.h)
         LWIP_SOCKET=1       # we need the socket API (generally this would be in your lwipopts.h)
         )
-target_include_directories(picow_freertos_httpd_sys PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}     
+target_include_directories(idb PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
+        ${PICO_SDK_PATH}/include     
         ${FAT_PATH}/FreeRTOS+FAT+CLI/Lab-Project-FreeRTOS-FAT/include
         ${FAT_PATH}/FreeRTOS+FAT+CLI/portable/RP2040
         ${FAT_PATH}/FreeRTOS+FAT+CLI/include
@@ -97,7 +62,7 @@ target_include_directories(picow_freertos_httpd_sys PRIVATE
         ${FREERTOS_PATH}/portable/GCC/ARM_CM0
         ${CMAKE_CURRENT_LIST_DIR} 
         )       
-target_link_libraries(picow_freertos_httpd_sys        
+target_link_libraries(idb        
         pico_stdlib
         pico_cyw43_arch_lwip_sys_freertos
         pico_lwip_http
@@ -106,9 +71,8 @@ target_link_libraries(picow_freertos_httpd_sys
         FreeRTOS-Kernel-Heap4 # FreeRTOS kernel and dynamic heap   
         )           
 
-pico_add_extra_outputs(picow_freertos_httpd_sys)
+pico_add_extra_outputs(idb)
 
-pico_enable_stdio_usb(picow_freertos_httpd_sys 1)
-pico_enable_stdio_uart(picow_freertos_httpd_sys 0)
-pico_enable_stdio_usb(picow_freertos_httpd_nosys 1)
-pico_enable_stdio_uart(picow_freertos_httpd_nosys 0)
+pico_enable_stdio_usb(idb 1)
+pico_enable_stdio_uart(idb 0)
+
